<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pose_landmarker_ros</name>
  <version>0.0.1</version>
  <description>ROS 2 node: MediaPipe Pose Landmarker on sensor_msgs/Image.</description>
  <maintainer email="zacharycharlick@gmail.com">zacharycharlick</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>pose_landmarker_interfaces</depend>

  <!-- MediaPipe: pip install mediapipe (same interpreter as ros2 run). -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
